--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-    "name": "tic-tac-toe-online",
-    "version": "1.0.0",
-    "description": "Multiplayer Tic Tac Toe App",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "server": "npm run dev --prefix server",
-      "client": "npm start --prefix client"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/abolkog/tic-tac-toe-online.git"
-    },
-    "author": "Khalid Elshafie",
-    "license": "MIT",
-    "bugs": {
-      "url": "https://github.com/abolkog/tic-tac-toe-online/issues"
-    },
-    "homepage": "https://github.com/abolkog/tic-tac-toe-online#readme"
-  }
+  "name": "tic-tac-toe-online",
+  "version": "1.0.0",
+  "description": "Multiplayer Tic Tac Toe App",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "install": "npm install --prefix server && npm install --prefix client",
+    "server": "npm run dev --prefix server",
+    "client": "npm start --prefix client"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abolkog/tic-tac-toe-online.git"
+  },
+  "author": "Khalid Elshafie",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/abolkog/tic-tac-toe-online/issues"
+  },
+  "homepage": "https://github.com/abolkog/tic-tac-toe-online#readme"
+}
